# sb-omero-client

./: .gitignore  LICENSE  pyproject.toml
.config/: config_example.ini
sb_omero_client/: custom_omero_client.py  main.py
